<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:text="@string/lblTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/lblTitulo"
        app:layout_constraintTop_toBottomOf="@+id/lblTitulo" />

    <Button
        android:id="@+id/btnVerInventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="62dp"
        android:text="@string/btnVerInventario"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrarMain"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarMain" />

    <Button
        android:id="@+id/btnExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="59dp"
        android:text="@string/btnExportar"
        app:layout_constraintStart_toStartOf="@+id/btnVerInventario"
        app:layout_constraintTop_toBottomOf="@+id/btnVerInventario" />

</androidx.constraintlayout.widget.ConstraintLayout>