<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/nmbStock"
        app:layout_constraintStart_toStartOf="@+id/nmbStock"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nmbPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/nmbStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblStock"
        app:layout_constraintTop_toBottomOf="@+id/nmbPrecio" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="52dp"
        android:text="@string/lblNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="120dp"
        android:text="@string/lblPrecio"
        app:layout_constraintBottom_toBottomOf="@+id/nmbStock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="27dp"
        android:text="@string/lblStock"
        app:layout_constraintBottom_toBottomOf="@+id/nmbStock"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistrarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="96dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nmbStock" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/btnVolver"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrarMain"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarMain" />
</androidx.constraintlayout.widget.ConstraintLayout>